// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlackContextChip matches the dark theme snapshot 1`] = `
<View
  accessibilityHint="Opens the original Slack message"
  accessibilityLabel="View Slack message from Alice in #planning"
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#0d111c",
        "borderColor": "rgba(148, 163, 184, 0.18)",
        "borderRadius": 999,
        "borderWidth": 1,
        "elevation": 1,
        "flexDirection": "row",
        "gap": 5,
        "maxWidth": "100%",
        "minHeight": 44,
        "paddingHorizontal": 10,
        "paddingVertical": 7,
        "shadowColor": "#0f172a",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      false,
    ]
  }
  testID="slack-context-chip"
>
  <Text
    testID="slack-context-chip-icon"
  >
    message-square
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "rgba(203, 213, 225, 0.78)",
        "flexShrink": 1,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
        "lineHeight": 16,
        "minWidth": 0,
      }
    }
    testID="slack-context-chip-source"
  >
    Alice in #planning
  </Text>
  <Text
    accessibilityElementsHidden={true}
    importantForAccessibility="no"
    style={
      {
        "color": "#94a3b8",
        "flexShrink": 0,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "500",
        "letterSpacing": 0.2,
        "lineHeight": 16,
      }
    }
  >
    ·
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#94a3b8",
        "flexShrink": 1,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontStyle": "italic",
        "fontWeight": "500",
        "letterSpacing": 0.2,
        "lineHeight": 16,
        "minWidth": 0,
      }
    }
    testID="slack-context-chip-team"
  >
    Acme
  </Text>
  <Text
    accessibilityElementsHidden={true}
    importantForAccessibility="no"
    style={
      {
        "color": "#94a3b8",
        "flexShrink": 0,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "500",
        "letterSpacing": 0.2,
        "lineHeight": 16,
      }
    }
  >
    ·
  </Text>
  <Text
    style={
      {
        "color": "#8b5cf6",
        "flexShrink": 0,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
        "lineHeight": 16,
      }
    }
    testID="slack-context-chip-link-label"
  >
    View in Slack
  </Text>
</View>
`;

exports[`SlackContextChip matches the light theme snapshot 1`] = `
<View
  accessibilityHint="Opens the original Slack message"
  accessibilityLabel="View Slack message from Alice in #planning"
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#ffffff",
        "borderColor": "rgba(226, 232, 240, 0.7)",
        "borderRadius": 999,
        "borderWidth": 1,
        "elevation": 1,
        "flexDirection": "row",
        "gap": 5,
        "maxWidth": "100%",
        "minHeight": 44,
        "paddingHorizontal": 10,
        "paddingVertical": 7,
        "shadowColor": "#0f172a",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 2,
      },
      false,
    ]
  }
  testID="slack-context-chip"
>
  <Text
    testID="slack-context-chip-icon"
  >
    message-square
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "rgba(15, 23, 42, 0.6)",
        "flexShrink": 1,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
        "lineHeight": 16,
        "minWidth": 0,
      }
    }
    testID="slack-context-chip-source"
  >
    Alice in #planning
  </Text>
  <Text
    accessibilityElementsHidden={true}
    importantForAccessibility="no"
    style={
      {
        "color": "rgba(30, 41, 59, 0.55)",
        "flexShrink": 0,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "500",
        "letterSpacing": 0.2,
        "lineHeight": 16,
      }
    }
  >
    ·
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "rgba(30, 41, 59, 0.55)",
        "flexShrink": 1,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontStyle": "italic",
        "fontWeight": "500",
        "letterSpacing": 0.2,
        "lineHeight": 16,
        "minWidth": 0,
      }
    }
    testID="slack-context-chip-team"
  >
    Acme
  </Text>
  <Text
    accessibilityElementsHidden={true}
    importantForAccessibility="no"
    style={
      {
        "color": "rgba(30, 41, 59, 0.55)",
        "flexShrink": 0,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "500",
        "letterSpacing": 0.2,
        "lineHeight": 16,
      }
    }
  >
    ·
  </Text>
  <Text
    style={
      {
        "color": "#8b5cf6",
        "flexShrink": 0,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
        "lineHeight": 16,
      }
    }
    testID="slack-context-chip-link-label"
  >
    View in Slack
  </Text>
</View>
`;

exports[`SlackContextChip matches the long-label truncation snapshot 1`] = `
<View
  accessibilityHint="Opens the original Slack message"
  accessibilityLabel="View Slack message from Alexandria Longlastname-McPlannington in #quarterly-planning-and-cross-functional-risks"
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#0d111c",
        "borderColor": "rgba(148, 163, 184, 0.18)",
        "borderRadius": 999,
        "borderWidth": 1,
        "elevation": 1,
        "flexDirection": "row",
        "gap": 5,
        "maxWidth": "100%",
        "minHeight": 44,
        "paddingHorizontal": 10,
        "paddingVertical": 7,
        "shadowColor": "#0f172a",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      false,
    ]
  }
  testID="slack-context-chip"
>
  <Text
    testID="slack-context-chip-icon"
  >
    message-square
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "rgba(203, 213, 225, 0.78)",
        "flexShrink": 1,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
        "lineHeight": 16,
        "minWidth": 0,
      }
    }
    testID="slack-context-chip-source"
  >
    Alexandria Longlastname-McPlannington in #quarterly-planning-and-cross-functional-risks
  </Text>
  <Text
    accessibilityElementsHidden={true}
    importantForAccessibility="no"
    style={
      {
        "color": "#94a3b8",
        "flexShrink": 0,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "500",
        "letterSpacing": 0.2,
        "lineHeight": 16,
      }
    }
  >
    ·
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#94a3b8",
        "flexShrink": 1,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontStyle": "italic",
        "fontWeight": "500",
        "letterSpacing": 0.2,
        "lineHeight": 16,
        "minWidth": 0,
      }
    }
    testID="slack-context-chip-team"
  >
    Acme International Strategic Operations
  </Text>
  <Text
    accessibilityElementsHidden={true}
    importantForAccessibility="no"
    style={
      {
        "color": "#94a3b8",
        "flexShrink": 0,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "500",
        "letterSpacing": 0.2,
        "lineHeight": 16,
      }
    }
  >
    ·
  </Text>
  <Text
    style={
      {
        "color": "#8b5cf6",
        "flexShrink": 0,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
        "lineHeight": 16,
      }
    }
    testID="slack-context-chip-link-label"
  >
    View in Slack
  </Text>
</View>
`;

exports[`SlackContextChip matches the missing-metadata fallback snapshot 1`] = `
<View
  accessibilityLabel="View Slack message: Slack message"
  accessibilityRole="text"
  accessible={true}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0d111c",
      "borderColor": "rgba(148, 163, 184, 0.18)",
      "borderRadius": 999,
      "borderWidth": 1,
      "elevation": 1,
      "flexDirection": "row",
      "gap": 5,
      "maxWidth": "100%",
      "minHeight": 44,
      "paddingHorizontal": 10,
      "paddingVertical": 7,
      "shadowColor": "#0f172a",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="slack-context-chip"
>
  <Text
    testID="slack-context-chip-icon"
  >
    message-square
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "rgba(203, 213, 225, 0.78)",
        "flexShrink": 1,
        "fontFamily": "Figtree_500Medium",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
        "lineHeight": 16,
        "minWidth": 0,
      }
    }
    testID="slack-context-chip-source"
  >
    Slack message
  </Text>
</View>
`;
